--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -40,6 +40,8 @@
 .menu li {
     margin: 0 20px;
     padding: .3rem 1rem;
+    opacity: 0;
+    animation: slideUp 0.5s ease-in-out forwards;
 }
 
 .navbar-link {
@@ -47,8 +49,23 @@
     text-decoration: none;
     font-weight: var(--weight-medium);
     transition: var(--transition-1);
+    /* animation: slideUp 0.5s ease-in-out; */
 }
 
+@keyframes slideUp {
+    0% {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  .btn-primary-hidden {
+    opacity: 0;
+  }
 
 .btn.btn-primary {
     background-image: var(--gradient-2);
@@ -61,7 +78,17 @@
     padding: 8px 16px;
     border-radius: var(--radius-6);
     transition: var(--transition-1);
+
+    transition: opacity 0.5s ease;
+    /* opacity: 0; 
+    animation: fadeIn 0.5s ease-in-out forwards; */
 }
+
+@keyframes fadeIn {
+    to {
+      opacity: 1; /* Gradually make the button visible */
+    }
+  }
 
 .btn.btn-primary:hover {
     background-position: right;
@@ -76,3 +103,26 @@
     gap: .5rem;
     margin-right: 50px;
 }
+
+
+
+/* Delay the animation for each list item */
+.menu li:nth-child(1) {
+    animation-delay: 0.1s;
+  }
+  
+  .menu li:nth-child(2) {
+    animation-delay: 0.2s;
+  }
+  
+  .menu li:nth-child(3) {
+    animation-delay: 0.3s;
+  }
+  
+  .menu li:nth-child(4) {
+    animation-delay: 0.4s;
+  }
+  
+  .menu li:nth-child(5) {
+    animation-delay: 0.5s;
+  }
