--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
-
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 16px; }
+.container {
+  padding-inline: 16px;
+}
 
 .hover-1,
-.hover-2 { transition: var(--transition-1); }
+.hover-2 {
+  transition: var(--transition-1);
+}
 
-.hover-1:is(:hover, :focus-visible) { 
+.hover-1:is(:hover, :focus-visible) {
   color: var(--text-wild-blue-yonder);
   transform: translateX(3px);
 }
 
-.hover-2:is(:hover, :focus-visible) { color: var(--text-carolina-blue); }
+.hover-2:is(:hover, :focus-visible) {
+  color: var(--text-carolina-blue);
+}
 
 .profile-card {
   display: flex;
@@ -21,7 +26,9 @@
   gap: 10px;
 }
 
-.profile-card .profile-banner { border-radius: var(--radius-circle); }
+.profile-card .profile-banner {
+  border-radius: var(--radius-circle);
+}
 
 .headline {
   color: var(--text-columbia-blue);
@@ -34,14 +41,18 @@
   font-weight: var(--weight-extraBold);
 }
 
-.headline-2 { font-size: var(--fontSize-2); }
+.headline-2 {
+  font-size: var(--fontSize-2);
+}
 
 .headline-3 {
   font-size: var(--fontSize-2);
   line-height: var(--lineHeight-2);
 }
 
-.section-title { margin-block-end: 10px; }
+.section-title {
+  margin-block-end: 10px;
+}
 
 .headline .span {
   background-image: var(--gradient-1);
@@ -64,7 +75,9 @@
   transition: var(--transition-1);
 }
 
-.btn:is(:hover, :focus-visible) { background-position: right; }
+.btn:is(:hover, :focus-visible) {
+  background-position: right;
+}
 
 .btn-primary {
   padding: 8px 16px;
@@ -76,7 +89,9 @@
   border-radius: var(--radius-pill);
 }
 
-.w-100 { width: 100%; }
+.w-100 {
+  width: 100%;
+}
 
 .card {
   background-color: var(--bg-oxford-blue);
@@ -95,7 +110,9 @@
   object-fit: cover;
 }
 
-.section { padding-block: var(--section-padding); }
+.section {
+  padding-block: var(--section-padding);
+}
 
 .section-text {
   font-size: var(--fontSize-3);
@@ -120,4 +137,66 @@
   display: flex;
   gap: 3px;
   align-items: center;
+}
+
+
+@media (min-width: 575px) {
+  :root {
+
+    /**
+     * typography
+     */
+
+    /* font size */
+    --fontSize-1: 4.4rem;
+    --fontSize-2: 3.5rem;
+
+    /**
+     * spacing
+     */
+
+    --section-padding: 100px;
+
+  }
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container {
+    max-width: 540px;
+    width: 100%;
+    margin-inline: auto;
+  }
+
+  .headline-3 {
+    --fontSize-2: 2.4rem;
+  }
+
+}
+
+
+@media (min-width: 768px) {
+
+  :root {
+
+    /**
+     * typography
+     */
+
+    /* font size */
+    --fontSize-1: 6.4rem;
+    --fontSize-2: 4.5rem;
+
+  }
+
+  /**
+   * REUSED STYLE
+   */
+
+  .container {
+    max-width: 720px;
+  }
+
+
 }
