--- a/src/Components/Hero-Section/HeroSection.css
+++ b/src/Components/Hero-Section/HeroSection.css
@@ -102,6 +102,7 @@
         display: block;
         position: absolute;
         pointer-events: none;
+        z-index: 1;
     }
 
     .hero-bg-1 {
