--- a/src/Components/PoemPage/PoemPage.css
+++ b/src/Components/PoemPage/PoemPage.css
@@ -1,24 +1,19 @@
-/* PoemPage.css */
-
 .poem-page {
     position: relative;
     top: 100px;
     padding: 20px;
     text-align: center;
-  }
-  
-  h2 {
+}
+
+.poem-page h2 {
     font-size: 24px;
     color: #ff0000 !important;
     margin-bottom: 20px;
     z-index: 999999 !important;
-  }
-  
-  p {
+}
+
+.poem-page p {
     font-size: 18px;
     line-height: 1.6;
     color: #555;
-  }
-  
-  /* You can add more styles as needed */
-  
+}
