--- a/src/Components/PoemPage/PoemPage.css
+++ b/src/Components/PoemPage/PoemPage.css
@@ -17,3 +17,66 @@
     line-height: 1.6;
     color: #555;
 }
+
+
+
+@media (min-width: 575px) {
+    .hero-bg-1 {
+        top: 80px;
+        left: 0;
+    }
+
+    .hero-bg-2 {
+        bottom: -200px;
+        left: -20px;
+    }
+
+   
+
+    .bg3 {
+        left: 100px;
+        bottom: 10px;
+        z-index: -1;
+    }
+
+
+   
+}
+
+@media (min-width: 992px) {
+
+    .hero-bg-1 {
+        top: 80px;
+        left: 0;
+    }
+
+    .hero-bg-2 {
+        bottom: -200px;
+        left: -20px;
+    }
+
+    .bg3 {
+        left: 700px;
+        bottom: 10px;
+        z-index: -1;
+    }
+}
+
+
+@media (min-width: 1200px) {
+   
+    .hero-bg-1 {
+        top: 150px;
+        left: 0px;
+    }
+
+    .hero-bg-2 {
+        bottom: -300px;
+        left: -20px;
+    }
+    
+    .bg3 {
+        left: 1000px;
+        top: 100px;
+    }
+}
