--- a/src/Components/PoemPage/PoemPage.css
+++ b/src/Components/PoemPage/PoemPage.css
@@ -12,28 +12,37 @@
     z-index: 999999 !important;
 }
 
-.poem-page p {
-    font-size: 18px;
-    line-height: 1.6;
-    color: #555;
+.poem{
+    text-align: center;
 }
 
+.poemText {
+    display: inline-block;
+    text-align: left;
+    white-space: pre-line;
+    padding: 1em;
+  }
 
-
+.poem-page .btn{
+    position: absolute;
+    top: 500px;
+    left: 1400px;
+}
+  
 @media (min-width: 575px) {
-    .hero-bg-1 {
+    .poem-page .hero-bg-1 {
         top: 80px;
         left: 0;
     }
 
-    .hero-bg-2 {
+    .poem-page .hero-bg-2 {
         bottom: -200px;
         left: -20px;
     }
 
    
 
-    .bg3 {
+    .poem-page .bg3 {
         left: 100px;
         bottom: 10px;
         z-index: -1;
@@ -45,17 +54,17 @@
 
 @media (min-width: 992px) {
 
-    .hero-bg-1 {
+    .poem-page .hero-bg-1 {
         top: 80px;
         left: 0;
     }
 
-    .hero-bg-2 {
+    .poem-page .hero-bg-2 {
         bottom: -200px;
         left: -20px;
     }
 
-    .bg3 {
+    .poem-page .bg3 {
         left: 700px;
         bottom: 10px;
         z-index: -1;
@@ -65,17 +74,17 @@
 
 @media (min-width: 1200px) {
    
-    .hero-bg-1 {
-        top: 150px;
+    .poem-page .hero-bg-1 {
+        top: -250px;
         left: 0px;
     }
 
-    .hero-bg-2 {
-        bottom: -300px;
-        left: -20px;
+    .poem-page .hero-bg-2 {
+        bottom: 20px;
+        left: 30px;
     }
     
-    .bg3 {
+    .poem-page .bg3 {
         left: 1000px;
         top: 100px;
     }
