--- a/src/Components/PoemPage/PoemPage.css
+++ b/src/Components/PoemPage/PoemPage.css
@@ -29,6 +29,40 @@
     left: 1400px;
 }
 
+/* Loading Screen Styles */
+.loading-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999; /* Ensure it's on top of other content */
+  }
+  
+  .loading-circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 4px solid #3498db; /* Set the border color to your desired color */
+    border-top: 4px solid transparent; /* Make the top transparent */
+    animation: spin 1s linear infinite; /* Rotate animation */
+    margin-right: 10px; /* Adjust spacing between circles */
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+
 @media (min-width: 575px) {
     .poem-page .hero-bg-1 {
         top: 80px;
