added comment section

--- a/src/Components/RecentPost/RecentPost.css
+++ b/src/Components/RecentPost/RecentPost.css
@@ -1,7 +1,3 @@
-/* -----------------------------------*\
-  #RECENT POST
-\*-----------------------------------*/
-
 .recent-post .container {
     display: grid;
     gap: 50px;
@@ -80,6 +76,77 @@
 }
 
 
+.aside-card {
+    padding: 25px;
+    border-radius: var(--radius-16);
+}
+
+.aside-title {
+    margin-block-end: 40px;
+}
+
+.aside-title .span {
+    position: relative;
+}
+
+.aside-title .span::after {
+    content: "";
+    display: block;
+    width: 96px;
+    height: 3px;
+    background-color: var(--bg-carolina-blue);
+    margin-block-start: 10px;
+}
+
+.popular-card {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    margin-block-start: 20px;
+}
+
+.popular-card .card-banner {
+    width: 54px;
+    flex-shrink: 0;
+    border-radius: var(--radius-circle);
+}
+
+.popular-list>li:not(:last-child) .card-content {
+    border-block-end: 1px solid var(--border-prussian-blue);
+}
+
+.popular-card .warpper {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 10px;
+    font-size: var(--fontSize-6);
+    color: var(--text-slate-gray);
+    margin-block: 12px 20px;
+}
+
+.comment-list>li:not(:last-child) .comment-card {
+    padding-block-end: 22px;
+    border-block-end: 1px solid var(--border-prussian-blue);
+    margin-block-end: 22px;
+}
+
+.comment-card .card-text {
+    color: var(--text-wild-blue-yonder);
+    font-size: var(--fontSize-6);
+    line-height: var(--lineHeight-1);
+    margin-block-end: 20px;
+}
+
+.comment-card .profile-card {
+    color: var(--text-slate-gray);
+    font-size: var(--fontSize-6);
+}
+
+.comment-card .card-date {
+    font-size: var(--fontSize-7);
+}
+
 
 @media (min-width: 768px) {
 
@@ -99,11 +166,10 @@
         align-items: flex-start;
     }
 
-    .recent-post .section-title{
+    .recent-post .section-title {
         font-size: 35px;
     }
 
 
 
 }
-
