--- a/src/Components/RecentPost/RecentPost.css
+++ b/src/Components/RecentPost/RecentPost.css
@@ -98,33 +98,6 @@
     margin-block-start: 10px;
 }
 
-.popular-card {
-    display: flex;
-    align-items: flex-start;
-    gap: 10px;
-    margin-block-start: 20px;
-}
-
-.popular-card .card-banner {
-    width: 54px;
-    flex-shrink: 0;
-    border-radius: var(--radius-circle);
-}
-
-.popular-list>li:not(:last-child) .card-content {
-    border-block-end: 1px solid var(--border-prussian-blue);
-}
-
-.popular-card .warpper {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    column-gap: 10px;
-    font-size: var(--fontSize-6);
-    color: var(--text-slate-gray);
-    margin-block: 12px 20px;
-}
-
 .comment-list>li:not(:last-child) .comment-card {
     padding-block-end: 22px;
     border-block-end: 1px solid var(--border-prussian-blue);
@@ -147,6 +120,26 @@
     font-size: var(--fontSize-7);
 }
 
+
+.post-aside .input-wrapper{
+    position: relative;
+    padding: 10px;
+    padding-inline-start: 20px;
+    background-color: var(--bg-prussian-blue);
+    border-radius: var(--radius-6);
+    border: 1px solid var(--bg-carolina-blue);
+    display: flex;
+    justify-items: flex-end;
+    transition: var(--transition-1);
+}
+
+.post-aside .input-field {
+    padding-inline-end: 5px;
+}
+
+.post-aside .input-wrapper:hover {
+    box-shadow: var(--shadow-2);
+}
 
 @media (min-width: 768px) {
 
