--- a/src/Components/HotTopics/HotTopics.css
+++ b/src/Components/HotTopics/HotTopics.css
@@ -3,6 +3,7 @@
     border-radius: var(--radius-8);
     z-index: 0;
     margin-bottom: 20px;
+    /* gap: 5px !important; */
 }
 
 .topic-card .card-content {
@@ -44,16 +45,18 @@
     position: relative;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
     transition: transform var(--transition-2);
 }
 
 .slider-item {
     min-width: 100%;
+    
 }
 
 .slider-card {
     position: relative;
+    width: 100%;
 }
 
 .slider-card::before {
