--- a/src/Components/PoemPage/PoemPage.css
+++ b/src/Components/PoemPage/PoemPage.css
@@ -1,15 +1,12 @@
 .poem-page {
     position: relative;
-    top: 100px;
-    padding: 20px;
+
     text-align: center;
 }
 
 .poem-page h2 {
     font-size: 24px;
-    color: #ff0000 !important;
     margin-bottom: 20px;
-    z-index: 999999 !important;
 }
 
 .poem {
@@ -21,12 +18,11 @@
     text-align: left;
     white-space: pre-line;
     padding: 1em;
+    /* font-size: var(--fontSize-7); */
 }
 
 .poem-page .btn {
-    position: absolute;
-    top: 500px;
-    left: 1400px;
+    position: relative;
 }
 
 /* Loading Screen Styles */
@@ -74,19 +70,36 @@
         left: -20px;
     }
 
-
-
     .poem-page .bg3 {
         left: 100px;
         bottom: 10px;
         z-index: -1;
     }
 
+    .poem-page{
+        top: 25px;
+        padding: 5px;
+    }
 
+    .poem-page .btn {
+        top: 450px;
+        left: 900px;
+    }
+    
 
 }
 
 @media (min-width: 992px) {
+
+    .poem-page{
+        top: 100px;
+        padding: 20px;
+    }
+
+    .poem-page .btn {
+        top: 500px;
+        left: 1100px;
+    }
 
     .poem-page .hero-bg-1 {
         top: 80px;
@@ -103,10 +116,17 @@
         bottom: 10px;
         z-index: -1;
     }
+
+ 
 }
 
 
 @media (min-width: 1200px) {
+    .poem-page{
+        top: 100px;
+        padding: 20px;
+    }
+  
 
     .poem-page .hero-bg-1 {
         top: -250px;
@@ -121,5 +141,10 @@
     .poem-page .bg3 {
         left: 1000px;
         top: 100px;
+    }
+
+    .poem-page .btn{
+        top: 500px;
+        left: 1200px;
     }
 }
